# gcp-playground

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.build  Makefile  main.cpp
cmake/Modules/: FindProtobuf.cmake  FindTBB.cmake  Findabseil.cmake  Findgflags.cmake  Findgrpc.cmake
echo_server/: echo.grpc.pb.h  echo.pb.cc  echo.pb.h  server.cpp
echo_server/config/: api_config.yaml  api_descriptor.pb  k8s.yaml
src/: CMakeLists.txt  main.cpp
src/contrib/: CMakeLists.txt
src/echo_client/: client.cpp  client.h  client_async.cpp  client_async.h
src/echo_client/config/: k8s.yaml
src/echo_server/: echo.grpc.pb.cc  server.cpp  server.h  server_async.cpp  server_async.h
src/echo_server/config/: k8s.yaml
src/echo_server/protos/: echo.proto
